Add role validation
